# XCraft

./: .gitignore  Cargo.toml  README.md  build.rs  launcher.rc  log_screen  logged_in  public_release  sign_in
src/: config.rs  launcher.rs  main.rs  minecraft.rs  util.rs
src/js/: skinview3d.js
src/www/: html  loading_screen.html  main_screen  notification.html  portable.html  profile_customization  public_release.html  settings  sign_in.html
