[package]
name = "CraftX"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.9"
wry = "0.50.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
dirs = "6.0.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
surf = { version = "2.3.2", features = ["hyper-client"] }
base64 = "0.22.1"
zip-extract = "0.2.1"
java-locator = "0.1.9"
log = "0.4.26"
env_logger = "0.11.7"
toml = "0.8.20"
nicotine = { git = "https://gitea.awain.net/alterwain/Nicotine.git", version = "0.1.16" }